[gd_scene load_steps=77 format=2]

[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=1]
[ext_resource path="res://content/monster/FlashMaterial.tres" type="Material" id=2]
[ext_resource path="res://content/sounds/monster/tick/Tickdeath_05.wav" type="AudioStream" id=3]
[ext_resource path="res://content/sounds/monster/tick/Tickdeath_01.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/monster/tick/tick_explode.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_05.wav" type="AudioStream" id=6]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_01.wav" type="AudioStream" id=7]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_02.wav" type="AudioStream" id=8]
[ext_resource path="res://content/sounds/monster/tick/Tickdeath_03.wav" type="AudioStream" id=9]
[ext_resource path="res://content/sounds/monster/tick/Tickdeath_04.wav" type="AudioStream" id=10]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_03.wav" type="AudioStream" id=11]
[ext_resource path="res://content/sounds/monster/tick/Tickdeath_02.wav" type="AudioStream" id=12]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_04.wav" type="AudioStream" id=13]
[ext_resource path="res://content/sounds/monster/tick/tick_jump.wav" type="AudioStream" id=14]
[ext_resource path="res://content/monster/bigtick/BigTick.gd" type="Script" id=15]
[ext_resource path="res://content/sounds/monster/Mucker/MuckerDie.wav" type="AudioStream" id=16]
[ext_resource path="res://content/monster/bigtick/sheet.png" type="Texture" id=17]
[ext_resource path="res://systems/audio/Sound.gd" type="Script" id=18]
[ext_resource path="res://content/sounds/Retro Blop 03.wav" type="AudioStream" id=19]

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 17 )
region = Rect2( 0, 92, 37, 23 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 17 )
region = Rect2( 37, 92, 37, 23 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 17 )
region = Rect2( 0, 138, 37, 23 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 17 )
region = Rect2( 37, 138, 37, 23 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 17 )
region = Rect2( 74, 138, 37, 23 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 17 )
region = Rect2( 111, 138, 37, 23 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 17 )
region = Rect2( 148, 138, 37, 23 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 17 )
region = Rect2( 185, 138, 37, 23 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 17 )
region = Rect2( 222, 138, 37, 23 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 17 )
region = Rect2( 259, 138, 37, 23 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 17 )
region = Rect2( 296, 138, 37, 23 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 37, 23 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 17 )
region = Rect2( 37, 0, 37, 23 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 17 )
region = Rect2( 74, 0, 37, 23 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 17 )
region = Rect2( 111, 0, 37, 23 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 17 )
region = Rect2( 148, 0, 37, 23 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 17 )
region = Rect2( 185, 0, 37, 23 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 17 )
region = Rect2( 222, 0, 37, 23 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 17 )
region = Rect2( 259, 0, 37, 23 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 17 )
region = Rect2( 0, 115, 37, 23 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 17 )
region = Rect2( 37, 115, 37, 23 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 17 )
region = Rect2( 74, 115, 37, 23 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 17 )
region = Rect2( 111, 115, 37, 23 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 17 )
region = Rect2( 148, 115, 37, 23 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 17 )
region = Rect2( 185, 115, 37, 23 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 17 )
region = Rect2( 222, 115, 37, 23 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 17 )
region = Rect2( 259, 115, 37, 23 )

[sub_resource type="AtlasTexture" id=160]
atlas = ExtResource( 17 )
region = Rect2( 0, 69, 37, 23 )

[sub_resource type="AtlasTexture" id=163]
atlas = ExtResource( 17 )
region = Rect2( 111, 69, 37, 23 )

[sub_resource type="AtlasTexture" id=165]
atlas = ExtResource( 17 )
region = Rect2( 185, 69, 37, 23 )

[sub_resource type="AtlasTexture" id=166]
atlas = ExtResource( 17 )
region = Rect2( 222, 69, 37, 23 )

[sub_resource type="AtlasTexture" id=167]
atlas = ExtResource( 17 )
region = Rect2( 259, 69, 37, 23 )

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 17 )
region = Rect2( 296, 69, 37, 23 )

[sub_resource type="AtlasTexture" id=169]
atlas = ExtResource( 17 )
region = Rect2( 333, 69, 37, 23 )

[sub_resource type="AtlasTexture" id=170]
atlas = ExtResource( 17 )
region = Rect2( 370, 69, 37, 23 )

[sub_resource type="AtlasTexture" id=171]
atlas = ExtResource( 17 )
region = Rect2( 407, 69, 37, 23 )

[sub_resource type="AtlasTexture" id=172]
atlas = ExtResource( 17 )
region = Rect2( 444, 69, 37, 23 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 17 )
region = Rect2( 0, 23, 37, 23 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 17 )
region = Rect2( 37, 23, 37, 23 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 17 )
region = Rect2( 74, 23, 37, 23 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 17 )
region = Rect2( 111, 23, 37, 23 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 17 )
region = Rect2( 148, 23, 37, 23 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 17 )
region = Rect2( 185, 23, 37, 23 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 17 )
region = Rect2( 222, 23, 37, 23 )

[sub_resource type="AtlasTexture" id=159]
atlas = ExtResource( 17 )
region = Rect2( 259, 23, 37, 23 )

[sub_resource type="AtlasTexture" id=173]
atlas = ExtResource( 17 )
region = Rect2( 0, 46, 37, 23 )

[sub_resource type="AtlasTexture" id=174]
atlas = ExtResource( 17 )
region = Rect2( 37, 46, 37, 23 )

[sub_resource type="AtlasTexture" id=175]
atlas = ExtResource( 17 )
region = Rect2( 74, 46, 37, 23 )

[sub_resource type="AtlasTexture" id=176]
atlas = ExtResource( 17 )
region = Rect2( 111, 46, 37, 23 )

[sub_resource type="AtlasTexture" id=177]
atlas = ExtResource( 17 )
region = Rect2( 148, 46, 37, 23 )

[sub_resource type="AtlasTexture" id=178]
atlas = ExtResource( 17 )
region = Rect2( 185, 46, 37, 23 )

[sub_resource type="AtlasTexture" id=179]
atlas = ExtResource( 17 )
region = Rect2( 222, 46, 37, 23 )

[sub_resource type="AtlasTexture" id=180]
atlas = ExtResource( 17 )
region = Rect2( 259, 46, 37, 23 )

[sub_resource type="AtlasTexture" id=181]
atlas = ExtResource( 17 )
region = Rect2( 296, 46, 37, 23 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 118 ), SubResource( 119 ) ],
"loop": true,
"name": "hit",
"speed": 10.0
}, {
"frames": [ SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ) ],
"loop": false,
"name": "explode",
"speed": 10.0
}, {
"frames": [ SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ SubResource( 160 ), SubResource( 163 ), SubResource( 165 ), SubResource( 166 ), SubResource( 167 ), SubResource( 168 ), SubResource( 169 ), SubResource( 170 ), SubResource( 171 ), SubResource( 172 ) ],
"loop": false,
"name": "jump",
"speed": 6.0
}, {
"frames": [ SubResource( 152 ), SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ) ],
"loop": false,
"name": "burrow",
"speed": 10.0
}, {
"frames": [ SubResource( 173 ), SubResource( 174 ), SubResource( 175 ), SubResource( 176 ), SubResource( 177 ), SubResource( 178 ), SubResource( 179 ), SubResource( 180 ), SubResource( 181 ) ],
"loop": false,
"name": "emerge",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=68]
radius = 7.0

[sub_resource type="CircleShape2D" id=182]
radius = 4.0

[node name="BigTick" type="Area2D" groups=["monster"]]
collision_layer = 128
collision_mask = 0
script = ExtResource( 15 )
techId = "bigtick"

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 2 )
position = Vector2( -5, -4 )
frames = SubResource( 31 )
animation = "walk"

[node name="HitboxDefault" type="CollisionShape2D" parent="."]
position = Vector2( 2, -3 )
shape = SubResource( 68 )

[node name="DieSound" parent="." instance=ExtResource( 1 )]
volume_db = 1.762
pitch_scale = 1.06
bus = "World"
randomVolume = 1.0
randomPitch = 0.2
streams = [ ExtResource( 4 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 3 ) ]
removeAfterPlaying = true

[node name="DieSound" parent="DieSound" instance=ExtResource( 1 )]
stream = ExtResource( 16 )
volume_db = -5.676
pitch_scale = 0.75
bus = "World"
randomVolume = 1.0
randomPitch = 0.2
removeAfterPlaying = true

[node name="DieSoundExplode" parent="." instance=ExtResource( 1 )]
stream = ExtResource( 5 )
volume_db = 5.759
bus = "World"
randomPitch = 0.2

[node name="JumpSound" parent="." instance=ExtResource( 1 )]
stream = ExtResource( 14 )
volume_db = 1.958
pitch_scale = 1.3
bus = "World"
randomPitch = 0.18
streams = [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 6 ) ]

[node name="StepCollisions" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StepCollisions"]
shape = SubResource( 182 )

[node name="IsHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = 2.548
pitch_scale = 1.38
bus = "World"
script = ExtResource( 18 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
